Member Page Start

--- a/config.json
+++ b/config.json
@@ -415,6 +415,12 @@
       "css": "minus",
       "code": 59420,
       "src": "entypo"
+    },
+    {
+      "uid": "b08cfe8039de2ce815686aced2caef06",
+      "css": "download",
+      "code": 59421,
+      "src": "entypo"
     }
   ]
 }
